2003-03-29  Christian Schaller <uraeus@gnome.org>
	* Added pascal, asembler, yacc and ape mimetypes
	* Removed icons dir from build
	* Updated SPEC file to include latest changes
	* Set version to 2.3
	* make a gnome 2.2 branch
	* Merge Red Hat's patches 

2003-03-29  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: fix up the usage of Caps in the descriptions
	* gnome-vfs.mime: tabs not spaces

2003-03-27  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: added application/x-ipod-firmware that
	recognises the iPod Firmware files

2003-03-26  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "yi" to ALL_LINGUAS.

2003-03-20  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" to ALL_LINGUAS

2003-03-04  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: more magic for ASF reference files (->asx)

2003-02-28  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: added magic for Philips MPEG-4 files

2003-02-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: detect ASF videos by content

2003-02-21  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-18  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: detect realaudio playlist files properly

2003-02-10  Mohammad DAMT  <mdamt@bisnisweb.com>

	* po/id.po: Added Indonesian translation
	* configure.in: Added "id" to ALL_LINGUAS

2003-02-02  Andrew Sobala  <aes@gnome.org>

	* gnome-vfs.keys.in: reverting the string-freeze breaking change

2003-02-02  Andrew Sobala  <aes@gnome.org>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
          add x-gnome-theme and x-gnome-theme-installed

2003-02-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: added iso as a possible extension for ISO images

2003-02-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: added svgz as a possible extension for SVG files